# CAN-to-SomeIP-Gateway

./: README.md
install/include/silkit/capi/: SilKitVersionMacros.h
install/lib/cmake/SilKit/: SilKitConfig.cmake  SilKitConfigVersion.cmake
install_folder/lib/: libvsomeip3-cfg.so.3  libvsomeip3-e2e.so.3  libvsomeip3-e2e.so.3.5.6  libvsomeip3-sd.so.3  libvsomeip3.so.3
install_folder/lib/cmake/vsomeip3/: vsomeip3Targets-relwithdebinfo.cmake
install_folder/lib/pkgconfig/: vsomeip3.pc
sil-kit/Demos/communication/Can/: CMakeLists.txt  CanDemoCommon.hpp  CanReaderDemo.cpp  CanWriterDemo.cpp
sil-kit/Demos/communication/include/: ApplicationBase.hpp  SignalHandler.hpp
vsomeip/examples/hello_world/: helloworld-local.json
vsomeip/gateway/: CMakeLists.txt  can_socket.cpp  can_socket.hpp  main.cpp  someip_gateway.cpp  someip_gateway.hpp
vsomeip/silkit_someip_gateway/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile  vsomeip3.pc  vsomeip3ConfigVersion.cmake  vsomeip3Targets.cmake
vsomeip/silkit_someip_gateway/config/: silkit_config.yaml  someip_client.json  vsomeip-config.json
vsomeip/silkit_someip_gateway/examples/: Makefile  cmake_install.cmake
vsomeip/silkit_someip_gateway/examples/hello_world/: Makefile  cmake_install.cmake
vsomeip/silkit_someip_gateway/examples/routingmanagerd/: Makefile  cmake_install.cmake
vsomeip/silkit_someip_gateway/src/: GatewayApp.cpp  GatewayApp.hpp  SomeIPGateway.cpp  SomeIPGateway.hpp  main.cpp
vsomeip/silkit_someip_gateway/src_client/: SomeIPClient.cpp  SomeIPClient.hpp  main.cpp
vsomeip/silkit_someip_gateway/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
vsomeip/silkit_someip_gateway/tools/vsomeip_ctrl/: Makefile  cmake_install.cmake
vsomeip/test_example/: CMakeLists.txt
vsomeip/test_example/src/: client2.cpp  someip_server.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test_client.cpp  test_service.cpp
